--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <script defer src="./js/constants.js"></script>
   <!-- <script defer src="./js/MyArray.js"></script> -->
 
-  <script defer src="./js/oldSyntax.js"></script>
-  <script defer src="./js/newSyntax.js"></script>
+  <!-- <script defer src="./js/oldSyntax.js"></script>
+  <script defer src="./js/newSyntax.js"></script> -->
 
   <script defer src="./js/index.js"></script>
 </head>
