--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JS</title>
   <script defer src="./js/constants.js"></script>
+  <script defer src="./js/MyArrayClass.js"></script>
   <!-- <script defer src="./js/MyArray.js"></script> -->
 
   <!-- <script defer src="./js/oldSyntax.js"></script>
