--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- <script defer src="./js/oldSyntax.js"></script>
   <script defer src="./js/newSyntax.js"></script> -->
-
+  <script defer src="./js/LinkedList.js"></script>
   <script defer src="./js/index.js"></script>
 </head>
 <body>
