--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <!-- <script defer src="./js/oldSyntax.js"></script>
   <script defer src="./js/newSyntax.js"></script> -->
   <!-- <script defer src="./js/LinkedList.js"></script> -->
-  <script defer src="./js/Stack.js"></script>
+  <!-- <script defer src="./js/Stack.js"></script>
+  <script defer src="./js/Queue.js"></script> -->
+  <script defer src="./js/map.js"></script>
   <script defer src="./js/index.js"></script>
 </head>
 <body>
