--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- <script defer src="./js/LinkedList.js"></script> -->
   <!-- <script defer src="./js/Stack.js"></script>
   <script defer src="./js/Queue.js"></script> -->
-  <script defer src="./js/map.js"></script>
+  <!-- <script defer src="./js/map.js"></script> -->
   <script defer src="./js/index.js"></script>
 </head>
 <body>
